Updated URLs for the URL actually in use.

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,6 @@
 # and then run "tox" from this directory.
 
 [tox]
-# WSGIProxy isn't (yet) py3 compatible.
 skip_missing_interpreters=True
 # When updating, don't forget .travis.yml!
 envlist = py27, py32, py33, py34, py35, pypy, jython, coverage, pep8, pylint, docs
@@ -16,19 +15,19 @@ testpaths = tests
 commands = 
 	py.test
 	coverage erase
-	coverage run --include="*/MYMODULE.py" tests/test_MYMODULE.py
+	coverage run --include="*/Python-Skel.py" tests/test_Python-Skel.py
 	coverage report -m --fail-under=100
 deps =
 	-r{toxinidir}/requirements.txt
 	-r{toxinidir}/dev-requirements.txt
 
 [testenv:pep8]
-commands = pep8 --show-source --count MYMODULE/ tests/
+commands = pep8 --show-source --count Python-Skel/ tests/
 deps = pep8
 
 [testenv:pylint]
 whitelist_externals = bash
-commands= bash -c "pylint -E MYMODULE/ tests/*"
+commands= bash -c "pylint -E Python-Skel/ tests/*"
 deps=pylint
 	-r{toxinidir}/requirements.txt
 	-r{toxinidir}/dev-requirements.txt
