Make suer coverage.py does branching so all paths are covered.

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ deps=pylint
 [testenv:docs]
 changedir = docs
 commands = 
-	sphinx-build -aEn -b html . _build/html
+	sphinx-build -aEn -b {env:DOC_TARGET:html} . _build/html
 	sphinx-build -aEn -b coverage . _build/coverage
 deps = sphinx
 	-r{toxinidir}/requirements.txt
